--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -20,9 +22,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Property App</title>
+
   </head>
   <body>
-    
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
